--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<groupId>guru.springframework</groupId>
 	<artifactId>sfg-pet-clinicc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>sfg-pet-clinicc</name>
+	<name>sfg-pet-clinic</name>
 	<description>SFG Pet Clinic Project</description>
 	<properties>
 		<java.version>19</java.version>
@@ -38,7 +38,18 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<goals>install</goals>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<developerConnection>scm:git:https://github.com/mawross/sfg-pet-clinicc.git</developerConnection>
+	</scm>
 
 </project>
