--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>sfg-pet-clinicc</artifactId>
         <groupId>guru.springframework</groupId>
-        <version>0.0.2</version>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -22,7 +22,7 @@
         <dependency>
             <artifactId>pet-clinic-data</artifactId>
             <groupId>guru.springframework</groupId>
-            <version>0.0.2</version>
+            <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
