Implement Interfaces for services. Closes #5

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Sat Oct 22 14:52:02 CEST 2022
+#Sat Oct 22 15:17:39 CEST 2022
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.scm.guru.springframework\:sfg-pet-clinicc.developerConnection=scm\:git\:https\://github.com/mawross/sfg-pet-clinicc.git
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=create-backup-poms
+project.scm.guru.springframework\:pet-clinic-data.empty=true
+project.rel.guru.springframework\:sfg-pet-clinicc=0.0.2
+completedPhase=end-release
 scm.url=scm\:git\:https\://github.com/mawross/sfg-pet-clinicc.git
+project.rel.guru.springframework\:pet-clinic-web=0.0.2
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.scm.guru.springframework\:sfg-pet-clinicc.tag=HEAD
+pushChanges=true
+project.scm.guru.springframework\:pet-clinic-web.empty=true
+scm.tag=MojTag
+project.rel.guru.springframework\:pet-clinic-data=0.0.2
+project.dev.guru.springframework\:sfg-pet-clinicc=0.0.3-SNAPSHOT
+project.dev.guru.springframework\:pet-clinic-web=0.0.3-SNAPSHOT
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.dev.guru.springframework\:pet-clinic-data=0.0.3-SNAPSHOT
