--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 #internationalization
+spring.banner.image.location=vizsla.jpg
+#Internationalization
 spring.messages.basename=messages/messages
-spring.profiles.active=fr
+
+spring.profiles.active=map
