--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -72,7 +72,6 @@
             <version>${webjars-bootstrap.version}</version>
         </dependency>
         <!--  end of webjars  -->
-
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -94,6 +93,11 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>7.6.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
