--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -78,6 +78,11 @@
             <version>4.8.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
