--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
       # Then run your tests!
       - run:
           name: Test
-          # command: mvn test
-          command: mvn install
+          command: mvn test
+          # command: mvn install
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
