--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,14 +19,17 @@ jobs:
       # Checkout the code as the first step.
       - checkout
       # Use mvn clean and package as the standard maven build phase
-      - run:
-          name: Build
-          command: mvn -B -DskipTests clean package
+      - run: mvn install -DskipTests
+      - run: mvn dependency:go-offline
+
+          # name: Build
+          # command: mvn -B -DskipTests clean package
+
+
       # Then run your tests!
       - run:
           name: Test
-          # command: mvn test
-          command: mvn install
+          command: mvn test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
