--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -134,7 +134,11 @@
                             <version>2.23.0</version>
                         </dependency>
                     </dependencies>
-
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
             </plugin>
         </plugins>
     </build>
